fix operations and result on small scerens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -297,6 +297,15 @@ header {
                 text-align: center;
             }
 
+            /* Container for first row */
+            .calculation {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                gap: 0.8rem;
+            }
+
             #num1, #num2, #result {
                 background-color: var(--white);
                 box-shadow: 4px 4px 0 var(--accent-color-1);
@@ -401,6 +410,7 @@ header {
 @keyframes bounce {
     0%, 100% {
         transform: translateY(0);
+
     }
     50% {
         transform: translateY(-10px);
@@ -513,8 +523,17 @@ header {
         }
 
         #game-field #task {
-            gap: 0.8rem;
+            flex-direction: column;
+            gap: 1rem;
             
+            /* Container for first row */
+            .calculation {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 0.8rem;
+            }
+
             div {
                 font-size: 2rem;
                 padding: 0.8rem;
@@ -524,10 +543,27 @@ header {
             #operation, #equal {
                 font-size: 2.2rem;
             }
+
+            #equal {
+                margin: 0.5rem 0;
+            }
+
+            .result-container {
+                width: 160px;
+            }
+            
+            .result-field {
+                width: 60px;
+            }
         }
         
         .score-container {
             flex-direction: column;
+        }
+
+        .score {
+            flex-direction: column;
+            gap: 1rem;
         }
 
         .result-container {
@@ -631,6 +667,25 @@ footer {
                 -1px 1px 0 var(--accent-color-2),
                 0 0 15px var(--jewel-tone);
         }
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 50%;
+        height: 100%;
+        background: linear-gradient(
+            90deg,
+            transparent,
+            rgba(255, 255, 255, 0.3),
+            rgba(255, 255, 255, 0.5),
+            rgba(255, 255, 255, 0.3),
+            transparent
+        );
+        transform: skewX(-25deg);
+        animation: footerBeam 5s linear infinite;
     }
 }
 
